--- a/frontend/weather-app/src/styles/index.css
+++ b/frontend/weather-app/src/styles/index.css
@@ -2,15 +2,10 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
+@import './colors.css';
+@import './fonts.css';
+
 @theme {
-  /* Colors */
-  --color-primary: #135bec;
-  --color-background-light: #f6f6f8;
-  --color-background-dark: #101622;
-
-  /* Font Family */
-  --font-display: 'Inter', sans-serif;
-
   /* Border Radius */
   --radius: 0.25rem;       /* DEFAULT */
   --radius-lg: 0.5rem;
@@ -19,3 +14,23 @@
 }
 
 @custom-variant dark (&:is(.dark *));
+
+
+.custom-scroll::-webkit-scrollbar {
+  width: 8px; 
+  height: 8px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: var(--color-slate-800); 
+  border-radius: 10px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: var(--color-slate-600);
+  border-radius: 10px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background: var(--color-slate-500);
+}
